# MicrasFirmware

./: .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  PreLoad.cmake  README.md  compose.yaml  docker-compose.yaml  uncrustify.cfg
.docker/: Dockerfile
.docker/scripts/: build.sh  check_format.sh
.github/workflows/: ci.yaml  release.yaml
cfg/: target.cpp  target.hpp
cmake/: config_validation.cmake  linter.cmake  run_clang_tidy.sh  targets.cmake  utilities.cmake
cmake/scripts/: run_clang_tidy.sh
cmake/templates/: helpme.in  launch.json.in  run_clang_tidy.sh.in  tasks.json.in
config/: constants.hpp  target.cpp  target.hpp
cube/: micras.ioc  micras_v0.ioc
docker/: .dockerignore  Dockerfile
docker/scripts/: .cube  build.sh  cube.sh
host_tests/: CMakeLists.txt  kkkkk.txt
host_tests/coisas/: sample1_unittest.cc
inc/controller/: micras_controller.hpp  micras_controller_test.hpp
inc/hal/: adc_dma.hpp  crc.hpp  encoder.hpp  flash.hpp  gpio.hpp  mcu.hpp  pwm.hpp  pwm_dma.hpp  spi.hpp  tim.hpp  timer.hpp
inc/proxy/: argb.hpp  battery.hpp  button.hpp  buzzer.hpp  current_sensor_array.hpp  current_sensors.hpp  dip_switch.hpp  distance_sensor_array.hpp  distance_sensors.hpp  dual_motor_driver.hpp  fan.hpp  imu.hpp  led.hpp  locomotion.hpp  motor_driver.hpp  rotary_sensor.hpp  rotary_sensor_reg.hpp  serializable_interface.hpp  storage.hpp  torque_sensors.hpp
include/micras/: interface.hpp  micras.hpp  micras_controller.hpp
include/micras/states/: base.hpp  calibrate.hpp  error.hpp  idle.hpp  init.hpp  run.hpp  wait.hpp
micras_comm/: CMakeLists.txt
micras_comm/include/micras/comm/: communication_service.hpp  custom_serial_variable.hpp  logger.hpp  packet.hpp  primitive_serial_variable.hpp  serial_variable.hpp  serial_variable_pool.hpp
micras_comm/include/micras/comm/vars/: custom_serial_variable.hpp  primitive_serial_variable.hpp  serial_variable.hpp
micras_comm/src/: communication_service.cpp  logger.cpp  packet.cpp  serial_variable_pool.cpp
micras_core/: CMakeLists.txt
micras_core/include/micras/core/: butterworth_filter.hpp  concepts.hpp  fsm.hpp  pid_controller.hpp  types.hpp  utils.hpp  vector.hpp
micras_core/include/micras/core/serial/: serializable.hpp  variable_pool.hpp
micras_core/include/micras/core/serial/variables/: base.hpp  custom.hpp  primitive.hpp
micras_core/src/: butterworth_filter.cpp  fsm.cpp  pid_controller.cpp  vector.cpp
micras_core/src/serial/: variable_pool.cpp
micras_hal/: CMakeLists.txt
micras_hal/include/micras/hal/: adc_dma.hpp  crc.hpp  encoder.hpp  flash.hpp  gpio.hpp  mcu.hpp  pwm.hpp  pwm_dma.hpp  spi.hpp  timer.hpp  uart_dma.hpp
micras_hal/src/: adc_dma.cpp  crc.cpp  encoder.cpp  flash.cpp  gpio.cpp  mcu.cpp  pwm.cpp  pwm_dma.cpp  spi.cpp  timer.cpp  uart_dma.cpp
micras_nav/: CMakeLists.txt
micras_nav/include/micras/nav/: action_queuer.hpp  costmap.hpp  follow_wall.hpp  go_to_point.hpp  grid_pose.hpp  look_at_point.hpp  mapping.hpp  maze.hpp  maze_graph.hpp  odometry.hpp  pid_controller.hpp  speed_controller.hpp  state.hpp
micras_nav/include/micras/nav/actions/: base.hpp  move.hpp  turn.hpp
micras_nav/src/: action_queuer.cpp  costmap.cpp  follow_wall.cpp  go_to_point.cpp  grid_pose.cpp  look_at_point.cpp  mapping.cpp  maze.cpp  maze_graph.cpp  odometry.cpp  pid_controller.cpp  speed_controller.cpp  state.cpp
micras_proxy/: CMakeLists.txt
micras_proxy/include/micras/proxy/: argb.hpp  battery.hpp  bluetooth.hpp  bluetooth_serial.hpp  button.hpp  buzzer.hpp  dip_switch.hpp  distance_sensors.hpp  fan.hpp  imu.hpp  led.hpp  locomotion.hpp  motor.hpp  rotary_sensor.hpp  rotary_sensor_reg.hpp  serializable.hpp  serializable_interface.hpp  stopwatch.hpp  storage.hpp  torque_sensors.hpp  wall_sensors.hpp
micras_proxy/src/: argb.cpp  battery.cpp  bluetooth.cpp  bluetooth_serial.cpp  button.cpp  buzzer.cpp  dip_switch.cpp  distance_sensors.cpp  fan.cpp  imu.cpp  led.cpp  locomotion.cpp  motor.cpp  rotary_sensor.cpp  stopwatch.cpp  storage.cpp  torque_sensors.cpp  wall_sensors.cpp
src/: interface.cpp  main.cpp  micras.cpp  micras_controller.cpp
src/controller/: micras_controller.cpp  micras_controller_test.cpp
src/hal/: adc_dma.cpp  crc.cpp  encoder.cpp  flash.cpp  gpio.cpp  mcu.cpp  pwm.cpp  pwm_dma.cpp  spi.cpp  tim.cpp  timer.cpp
src/proxy/: argb.cpp  battery.cpp  button.cpp  buzzer.cpp  current_sensor_array.cpp  current_sensors.cpp  dip_switch.cpp  distance_sensor_array.cpp  distance_sensors.cpp  dual_motor_driver.cpp  fan.cpp  imu.cpp  led.cpp  locomotion.cpp  motor_driver.cpp  rotary_sensor.cpp  storage.cpp  torque_sensors.cpp
src/states/: calibrate.cpp  error.cpp  idle.cpp  init.cpp  run.cpp  wait.cpp
tests/inc/: test_core.hpp
tests/include/: test_core.hpp
tests/src/: test_core.cpp
tests/src/comm/: test_comm_service.cpp
tests/src/hal/: test_timer.cpp
tests/src/nav/: test_calibrate_feed_forward.cpp  test_follow_wall.cpp  test_go_to_point.cpp  test_look_at_point.cpp  test_odometry.cpp
tests/src/proxy/: test_argb.cpp  test_battery.cpp  test_button.cpp  test_buzzer.cpp  test_dip_switch.cpp  test_distance_sensors.cpp  test_fan.cpp  test_imu.cpp  test_led.cpp  test_locomotion.cpp  test_rotary_sensors.cpp  test_stopwatch.cpp  test_storage.cpp  test_torque_sensors.cpp  test_wall_sensors.cpp  test_wall_sensors_calibration.cpp
